<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>Lumbot</groupId>
  <artifactId>Lumbot</artifactId>
  <version>1.0.0</version>

  <name>Lumbot</name>
  <description>Lum Discord Bot</description>

  <properties>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <maven.build.timestamp.format>yyMMdd-HHmm</maven.build.timestamp.format>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
  </properties>

  <build>
    <finalName>bot_${maven.build.timestamp}</finalName>
    <sourceDirectory>src/</sourceDirectory>
    <plugins>
      <plugin>
        <groupId>io.github.git-commit-id</groupId>
        <artifactId>git-commit-id-maven-plugin</artifactId>
        <version>6.0.0</version>
        <executions>
          <execution>
            <id>get-the-git-infos</id>
            <goals>
              <goal>revision</goal>
            </goals>
            <phase>initialize</phase>
          </execution>
        </executions>
        <configuration>
          <generateGitPropertiesFile>true</generateGitPropertiesFile>
          <generateGitPropertiesFilename>${project.build.outputDirectory}/git.properties</generateGitPropertiesFilename>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-assembly-plugin</artifactId>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>single</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <descriptorRefs>
            <descriptorRef>jar-with-dependencies</descriptorRef>
          </descriptorRefs>
          <appendAssemblyId>false</appendAssemblyId>
          <archive>
            <manifest>
              <mainClass>slaynash.lum.bot.Main</mainClass>
            </manifest>
          </archive>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>versions-maven-plugin</artifactId>
      </plugin>
    </plugins>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>versions-maven-plugin</artifactId>
          <version>2.16.1</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <repositories>
    <repository>
      <id>sonatype</id>
      <url>https://central.sonatype.com/repository/maven-snapshots/</url>
    </repository>
    <repository>
      <id>jitpack.io</id>
      <url>https://jitpack.io</url>
    </repository>
  </repositories>

  <!-- mvn versions:display-dependency-updates -->
  <dependencies>
    <dependency>
      <groupId>com.google.code.gson</groupId>
      <artifactId>gson</artifactId>
      <version>2.14.0</version>
    </dependency>
    <dependency>
      <groupId>org.luaj</groupId>
      <artifactId>luaj-jse</artifactId>
      <version>3.0.1</version>
    </dependency>
    <dependency>
      <groupId>net.dv8tion</groupId>
      <artifactId>JDA</artifactId>
      <version>5.6.1</version>
      <exclusions>
        <exclusion>
          <groupId>club.minnced</groupId> <!-- Exclude DISCORD AUDIO -->
          <artifactId>opus-java</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <!-- for JavaSteam -->
      <groupId>in.dragonbra</groupId>
      <artifactId>javasteam</artifactId>
      <version>1.8.0</version>
    </dependency>
    <dependency>
      <!-- NON-ANDROID ONLY -->
      <groupId>org.bouncycastle</groupId>
      <artifactId>bcprov-jdk18on</artifactId>
      <version>1.84</version>
    </dependency>
    <dependency>
      <groupId>com.mysql</groupId>
      <artifactId>mysql-connector-j</artifactId>
      <version>9.7.0</version>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-simple</artifactId>
      <version>2.1.0-alpha1</version>
    </dependency>
    <dependency>
      <groupId>com.github.lastrix</groupId>
      <artifactId>mono.cecil</artifactId>
      <version>0.10.0.0</version>
    </dependency>
    <dependency> <!-- used for named regex groups -->
      <groupId>com.github.tony19</groupId>
      <artifactId>named-regexp</artifactId>
      <version>1.0.0</version>
    </dependency>
    <dependency>
      <groupId>com.github.zafarkhaja</groupId>
      <artifactId>java-semver</artifactId>
      <version>0.10.2</version>
    </dependency>
    <dependency> <!-- used to read unicode ML logs -->
    	<groupId>com.github.albfernandez</groupId>
    	<artifactId>juniversalchardet</artifactId>
    	<version>2.5.0</version>
    </dependency>
    <dependency>
      <groupId>io.github.java-diff-utils</groupId>
      <artifactId>java-diff-utils</artifactId>
      <version>4.17</version>
    </dependency>
  </dependencies>
</project>
